added dockerfiles and docker compose

--- a/API-Gateway/Dockerfile
+++ b/API-Gateway/Dockerfile
@@ -1,2 +1,18 @@
 FROM golang:1-alpine3.19 AS BaseImage
 
+WORKDIR /API-Gateway
+
+COPY . ./
+
+RUN go mod download
+
+RUN GOOS=linux go build -o ./api-gateway ./cmd
+
+FROM scratch AS build-stage 
+
+WORKDIR /
+
+COPY --from=BaseImage ./API-Gateway /
+COPY --from=BaseImage ./API-Gateway/config.env /
+
+ENTRYPOINT [ "/api-gateway"]
