--- a/API-Gateway/Dockerfile
+++ b/API-Gateway/Dockerfile
@@ -7,12 +7,16 @@ COPY . ./
 RUN go mod download
 
 RUN GOOS=linux go build -o ./api-gateway ./cmd
+RUN apk add -U --no-cache ca-certificates
+
 
 FROM scratch AS build-stage 
 
 WORKDIR /
 
-COPY --from=BaseImage ./API-Gateway /
+COPY --from=BaseImage ./API-Gateway/api-gateway /
 COPY --from=BaseImage ./API-Gateway/config.env /
+COPY --from=BaseImage /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 
-ENTRYPOINT [ "/api-gateway"]
+
+CMD [ "/api-gateway"]
