--- a/Deployment-configurations/mongodb-k8s.yaml
+++ b/Deployment-configurations/mongodb-k8s.yaml
@@ -23,7 +23,7 @@ spec:
           name: mongodb
         volumeMounts:
         - name: mongodb-data
-          mountPath: /data/db
+          mountPath: /data/db/mongodb
   volumeClaimTemplates:
   - metadata:
       name: mongodb-data
