--- a/.github/workflows/GigForge .yml
+++ b/.github/workflows/GigForge .yml
@@ -24,8 +24,9 @@ jobs:
 
     - name: Build and push Docker images
       run: |
-        docker compose -f Deployment-configurations/ImageBuilder.yaml build
-        docker compose -f Deployment-configurations/ImageBuilder.yaml push
+        cd Deployment-configurations
+        docker compose -f ImageBuilder.yaml build
+        docker compose -f ImageBuilder.yaml push
 
     - name: Authenticate to Google Cloud
       uses: google-github-actions/auth@v1
