--- a/project-svc/Dockerfile
+++ b/project-svc/Dockerfile
@@ -8,11 +8,15 @@ RUN go mod download
 
 RUN GOOS=linux go build -o ./project-svc ./cmd
 
+RUN apk add -U --no-cache ca-certificates
+
+
 FROM scratch AS build-stage 
 
 WORKDIR /
 
 COPY --from=BaseImage ./Project-svc/project-svc /
 COPY --from=BaseImage ./Project-svc/config.env /
+COPY --from=BaseImage /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 
 CMD [ "/project-svc"]
