--- a/Deployment-configurations/certificate=k8s.yaml
+++ b/Deployment-configurations/certificate=k8s.yaml
@@ -1,12 +1,12 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: hyperhive-certificate
-  namespace: hyperhive
+  name: gigforge-certificate
+  namespace: gigforge
 spec:
   dnsNames:
     - gigforge.jasim.online
-  secretName: 
+  secretName: gigforge-certificate
   issuerRef:
     name: letsencrypt-production
     kind: ClusterIssuer
