--- a/Job-svc/Dockerfile
+++ b/Job-svc/Dockerfile
@@ -8,11 +8,15 @@ RUN go mod download
 
 RUN GOOS=linux go build -o ./job-svc ./cmd
 
+RUN apk add -U --no-cache ca-certificates
+
+
 FROM scratch AS build-stage 
 
 WORKDIR /
 
 COPY --from=BaseImage ./Job-svc/job-svc /
 COPY --from=BaseImage ./Job-svc/config.env /
+COPY --from=BaseImage /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 
 CMD [ "/job-svc"]
