--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,7 +23,7 @@ services:
       - 27017:27017
 
   api-gateway: 
-    image: api-gateway
+    image: muhamedjasim/gigforge-api_gateway
     build: ./API-Gateway/
     restart: on-failure
     environment:
@@ -36,7 +36,8 @@ services:
       - "3000:3000"
 
   user-svc:
-    image: user-svc
+    image: muhamedjasim/gigforge-user_svc:latest
+    build: User-svc/
     restart: on-failure
     environment:
       DB_URL: "postgres://postgres:postgres@postgres:5432"
@@ -47,7 +48,8 @@ services:
   
 
   job-svc:
-    image: job-svc
+    image: muhamedjasim/gigforge-job_svc:latest
+    build: Job-svc/
     restart: on-failure
     environment:
       DB_URL: "postgres://postgres:postgres@postgres:5432"
@@ -58,7 +60,8 @@ services:
      
 
   project-svc:
-    image: project-svc
+    image: muhamedjasim/gigforge-project_svc:latest
+    build: project-svc/
     restart: on-failure
     environment:
       DB_URL: "postgres://postgres:postgres@postgres:5432"
@@ -68,15 +71,16 @@ services:
       - GigForge-Network
   
 
-  # chat-svc:
-  #   image: chat-svc
-  #   restart: on-failure
-  #   environment:
-  #     DB_URL: "postgres://postgres:postgres@postgres:5432"
-  #   depends_on:
-  #     - mongodb
-  #   networks:
-  #     - GigForge-Network
+  chat-svc:
+    image: muhamedjasim/gigforge-chat_svc:latest
+    build: chat-svc/
+    restart: on-failure
+    environment:
+      DB_URL: "postgres://postgres:postgres@postgres:5432"
+    depends_on:
+      - mongodb
+    networks:
+      - GigForge-Network
  
 
 volumes:
