--- a/Deployment-configurations/chat-svc-k8s-deployment.yaml
+++ b/Deployment-configurations/chat-svc-k8s-deployment.yaml
@@ -30,6 +30,8 @@ spec:
             secretKeyRef: 
               name: gigforge-secret
               key: rabbitmq-url
+        - name: PORT
+          value: :30005
         
 ---
 
