--- a/Deployment-configurations/gigForge-k8s-secret.yaml
+++ b/Deployment-configurations/gigForge-k8s-secret.yaml
@@ -17,4 +17,10 @@ data:
   user-url: Z2lnZm9yZ2UtdXNlci1zdmMtc2VydmljZTozMDAwMQ==
   project-url: Z2lnZm9yZ2UtcHJvamVjdC1zdmMtc2VydmljZTozMDAwNA==
   chat-url: Z2lnZm9yZ2UtY2hhdC1zdmMtc2VydmljZTozMDAwNQ==
+  #token-secret
+  token-secret: R2lnOTEyMzRGb3JnZXlhNTEyMzRhaG5rYTIzNA==
+  #otp
+  email: Z2lnZm9yZ2VpbnRlcm5hdGlvbmFsQGdtYWlsLmNvbQ==
+  email-password: eGJ0YnVuZmlmY2lyYnprZQ==
+
 
