--- a/Deployment-configurations/project-svc-k8s-deployment.yaml
+++ b/Deployment-configurations/project-svc-k8s-deployment.yaml
@@ -30,6 +30,8 @@ spec:
             secretKeyRef: 
               name: gigforge-secret
               key: user-url
+        - name: PORT
+          value: :30004
 ---
 
 apiVersion: v1
