--- a/.github/workflows/GigForge .yml
+++ b/.github/workflows/GigForge .yml
@@ -38,6 +38,11 @@ jobs:
       with:
         project_id: ${{ secrets.GCP_PROJECT_ID }}
         service_account_key: ${{ secrets.GCP_SA_KEY }}
+    
+    - name: Install gke-gcloud-auth-plugin
+      run: |
+        sudo apt-get update
+        sudo apt-get install google-cloud-sdk-gke-gcloud-auth-plugin
 
     - name: Get GKE credentials
       run: |
