--- a/.github/workflows/GigForge .yml
+++ b/.github/workflows/GigForge .yml
@@ -42,6 +42,7 @@ jobs:
     - name: Install gke-gcloud-auth-plugin 
       run: |
         sudo apt-get update
+        sudo apt-get install apt-transport-https ca-certificates gnupg
         sudo apt-get install google-cloud-sdk-gke-gcloud-auth-plugin
 
     - name: Get GKE credentials
