--- a/.github/workflows/GigForge .yml
+++ b/.github/workflows/GigForge .yml
@@ -38,11 +38,17 @@ jobs:
       with:
         project_id: ${{ secrets.GCP_PROJECT_ID }}
         service_account_key: ${{ secrets.GCP_SA_KEY }}
+
+    - name: Add Google Cloud SDK repository
+      run: |
+        echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] http://packages.cloud.google.com/apt cloud-sdk main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
+        sudo apt-get install apt-transport-https ca-certificates gnupg
+        curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
+        sudo apt-get update
     
     - name: Install gke-gcloud-auth-plugin 
       run: |
         sudo apt-get update
-        sudo apt-get install apt-transport-https ca-certificates gnupg
         sudo apt-get install google-cloud-sdk-gke-gcloud-auth-plugin
 
     - name: Get GKE credentials
