--- a/Deployment-configurations/job-svc-k8s-deployment.yaml
+++ b/Deployment-configurations/job-svc-k8s-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: gigforge-job-svc
-        image: muhamedjasim/gigforge-job_svc:latest
+        image: muhamedjasim/gigforge-job_svc:1.0
         ports:
         - containerPort: 30003
         env:
