update k8s ap-gateway yaml env

--- a/Deployment-configurations/api-gateway-k8s-deployment.yaml
+++ b/Deployment-configurations/api-gateway-k8s-deployment.yaml
@@ -25,7 +25,7 @@ spec:
             secretKeyRef:
               name: gigforge-secret
               key: user-url
-        - name: JOB_SVC
+        - name: Job_SVC
           valueFrom:
             secretKeyRef:
               name: gigforge-secret
