added envs in cicd file

--- a/API-Gateway/Dockerfile
+++ b/API-Gateway/Dockerfile
@@ -14,7 +14,7 @@ FROM scratch AS build-stage
 WORKDIR /
 
 COPY --from=BaseImage ./API-Gateway/api-gateway /
-# COPY --from=BaseImage ./API-Gateway/config.env /
+COPY --from=BaseImage ./API-Gateway/api-gateway_config.env /
 
 
 CMD [ "/api-gateway"]   
