--- a/Deployment-configurations/user-svc-k8s-deployment.yaml
+++ b/Deployment-configurations/user-svc-k8s-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: gigforge-user-svc
-        image: muhamedjasim/gigforge-user_svc:1.0
+        image: muhamedjasim/gigforge-user_svc:latest
         ports:
         - containerPort: 30001
         env:
