--- a/.github/workflows/GigForge .yml
+++ b/.github/workflows/GigForge .yml
@@ -22,6 +22,15 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
+    - name: Create config files
+      run: |
+          echo "${{ secrets.API_GATEWAY_CONFIG }}" > ./api-gateway_config.env
+          echo "${{ secrets.USERSVC_CONFIG }}" > ./user-svc_config.env
+          echo "${{ secrets.JOBSVC_CONFIG }}" > ./job-svc_config.env
+          echo "${{ secrets.PROJECTSVC_CONFIG }}" > ./project-svc_config.env
+          echo "${{ secrets.CHATSVC_CONFIG }}" > ./chat-svc_config.env
+
+
     - name: Build and push Docker images
       run: |
         cd Deployment-configurations
@@ -57,8 +66,9 @@ jobs:
 
     - name: Update Kubernetes deployments
       run: |
-        kubectl set image deployment/api-gateway-deployment gigforge-api-gateway=muhamedjasim/gigforge-api_gateway:1.0 -n gigforge
-        kubectl set image deployment/chat-svc-deployment gigforge-chat-svc=muhamedjasim/gigforge-chat_svc:1.0 -n gigforge
-        kubectl set image deployment/user-svc-deployment gigforge-user-svc=muhamedjasim/gigforge-user_svc:1.0 -n gigforge
-        kubectl set image deployment/job-svc-deployment gigforge-job-svc=muhamedjasim/gigforge-job_svc:1.0 -n gigforge
-        kubectl set image deployment/project-svc-deployment gigforge-project-svc=muhamedjasim/gigforge-project_svc:1.0 -n gigforge
+        kubectl set image deployment/api-gateway-deployment gigforge-api-gateway=muhamedjasim/gigforge-api_gateway:2.0 -n gigforge
+        kubectl set image deployment/chat-svc-deployment gigforge-chat-svc=muhamedjasim/gigforge-chat_svc:2.0 -n gigforge
+        kubectl set image deployment/user-svc-deployment gigforge-user-svc=muhamedjasim/gigforge-user_svc:2.0 -n gigforge
+        kubectl set image deployment/job-svc-deployment gigforge-job-svc=muhamedjasim/gigforge-job_svc:2.0 -n gigforge
+        kubectl set image deployment/project-svc-deployment gigforge-project-svc=muhamedjasim/gigforge-project_svc:2.0 -n gigforge
+        kubectl rollout restart deployment -n gigforge
