--- a/Deployment-configurations/api-gateway-k8s-deployment.yaml
+++ b/Deployment-configurations/api-gateway-k8s-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: gigforge-api-gateway
-        image: muhamedjasim/gigforge-api_gateway:1.0
+        image: muhamedjasim/gigforge-api_gateway:latest
         ports:
         - containerPort: 3000
         env:
