--- a/Deployment-configurations/chat-svc-k8s-deployment.yaml
+++ b/Deployment-configurations/chat-svc-k8s-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: gigforge-chat-svc
-        image: muhamedjasim/gigforge-chat_svc:1.0
+        image: muhamedjasim/gigforge-chat_svc:latest
         ports:
         - containerPort: 30005
         env:
