--- a/Deployment-configurations/project-svc-k8s-deployment.yaml
+++ b/Deployment-configurations/project-svc-k8s-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: gigforge-project-svc
-        image: muhamedjasim/gigforge-project_svc:1.0
+        image: muhamedjasim/gigforge-project_svc:latest
         ports:
         - containerPort: 30004
         env:
