--- a/.github/workflows/GigForge .yml
+++ b/.github/workflows/GigForge .yml
@@ -47,7 +47,7 @@ jobs:
       uses: google-github-actions/setup-gcloud@v1
       with:
         project_id: ${{ secrets.GCP_PROJECT_ID }}
-        service_account_key: ${{ secrets.GCP_SA_KEY }}
+        # service_account_key: ${{ secrets.GCP_SA_KEY }}
 
     - name: Add Google Cloud SDK repository
       run: |
@@ -67,10 +67,10 @@ jobs:
 
     - name: Update Kubernetes deployments
       run: |
-        kubectl set image deployment/api-gateway-deployment gigforge-api-gateway=muhamedjasim/gigforge-api_gateway:2.0 -n gigforge
-        kubectl set image deployment/chat-svc-deployment gigforge-chat-svc=muhamedjasim/gigforge-chat_svc:2.0 -n gigforge
-        kubectl set image deployment/user-svc-deployment gigforge-user-svc=muhamedjasim/gigforge-user_svc:2.0 -n gigforge
-        kubectl set image deployment/job-svc-deployment gigforge-job-svc=muhamedjasim/gigforge-job_svc:2.0 -n gigforge
-        kubectl set image deployment/project-svc-deployment gigforge-project-svc=muhamedjasim/gigforge-project_svc:2.0 -n gigforge
+        kubectl set image deployment/api-gateway-deployment gigforge-api-gateway=muhamedjasim/gigforge-api_gateway:3.0 -n gigforge
+        kubectl set image deployment/chat-svc-deployment gigforge-chat-svc=muhamedjasim/gigforge-chat_svc:3.0 -n gigforge
+        kubectl set image deployment/user-svc-deployment gigforge-user-svc=muhamedjasim/gigforge-user_svc:3.0 -n gigforge
+        kubectl set image deployment/job-svc-deployment gigforge-job-svc=muhamedjasim/gigforge-job_svc:3.0 -n gigforge
+        kubectl set image deployment/project-svc-deployment gigforge-project-svc=muhamedjasim/gigforge-project_svc:3.0 -n gigforge
         kubectl rollout restart deployment -n gigforge
 
