--- a/.github/workflows/GigForge .yml
+++ b/.github/workflows/GigForge .yml
@@ -70,4 +70,4 @@ jobs:
         kubectl set image deployment/user-svc-deployment gigforge-user-svc=muhamedjasim/gigforge-user_svc:3.3.1 -n gigforge
         kubectl set image deployment/job-svc-deployment gigforge-job-svc=muhamedjasim/gigforge-job_svc:3.3.1 -n gigforge
         kubectl set image deployment/project-svc-deployment gigforge-project-svc=muhamedjasim/gigforge-project_svc:3.3.1 -n gigforge
-        kubectl rollout restart deployment -n gigforge
+        kubectl rollout restart deployment -n gigforge 0
